deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whatthemovie
  name: whatthemovie
  namespace: whatthemovie
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: whatthemovie
status:
  loadBalancer: {}
