deploy/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: whatthemovie
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: whatthemovie
spec:
  rules:
  - host: whatthemovie.phuc.wtf
    http:
      paths:
      - path: /
        backend:
          serviceName: whatthemovie
          servicePort: http
